Pie de página de about
modificación pie de página sección media de información ,

--- a/about.html
+++ b/about.html
@@ -387,11 +387,11 @@
                             <h3>Información</h3>
                         </div>
                         <ul class="footer-links">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Casa</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Precios</a></li>
+                            <li><a href="#">Acerca de</a></li>
+                            <li><a href="#">Contacto</a></li>
                         </ul>
                         <!-- end links -->
                     </div>
@@ -428,7 +428,7 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-center">
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2020 <a href="#">Alpha Academia</a> Design By : <a href="https://Grupo5.com/">Andrés Franco López</a></p>
+                    <p class="footer-company-name">Todos los derechos reservados. &copy; 2020 <a href="#">Alpha Academia</a> Hecho por : <a href="https://Grupo5.com/">Andrés Franco López</a></p>
                 </div>
             </div>
         </div>
