Nombres de los testimonios
modificación de los nombres de cada personaje de los testimonios y algunos contenidos.

--- a/about.html
+++ b/about.html
@@ -284,11 +284,11 @@
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
                                 <img src="images/testi_02.png" alt="" class="img-fluid">
-                                <h4>Jacques Philips </h4>
+                                <h4>Fernando López </h4>
                             </div>
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i> Excelente Servicio!</h3>
-                                <p class="lead">Solucionaron todas mis dudas</p>
+                                <p class="lead">Ahora entiendo todo mas rápido</p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -297,7 +297,7 @@
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
                                 <img src="images/testi_03.png" alt="" class="img-fluid ">
-                                <h4>Venanda Mercy </h4>
+                                <h4>Camila Andrade </h4>
                             </div>
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i> Docentes con gran talento!</h3>
@@ -309,11 +309,11 @@
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
                                 <img src="images/testi_01.png" alt="" class="img-fluid">
-                                <h4>Camilo Andrés </h4>
+                                <h4>juan Camilo </h4>
                             </div>
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i> Gracias!</h3>
-                                <p class="lead">Recupere mi confianza y ahora participo en clase</p>
+                                <p class="lead">Recuperé mi confianza y ahora participo en clase</p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -322,7 +322,7 @@
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
                                 <img src="images/testi_02.png" alt="" class="img-fluid">
-                                <h4>Jacques Philips </h4>
+                                <h4>Cristian Casas </h4>
                             </div>
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i> Son lo Mejor!</h3>
@@ -335,7 +335,7 @@
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
                                 <img src="images/testi_03.png" alt="" class="img-fluid">
-                                <h4>Venanda Mercy </h4>
+                                <h4> Sandra Franco </h4>
                             </div>
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i> Recomendados!</h3>
