Fotos de Testimonios
se agregan fotos de los testimonios

--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
                     <div class="testi-carousel owl-carousel owl-theme">
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
-                                <img src="images/testi_01.png" alt="" class="img-fluid">
+                                <img src="images/hombre1.jpg" alt="" class="img-fluid">
                                 <h4> Santiago López </h4>
                             </div>
                             <div class="desc">
@@ -283,7 +283,7 @@
 
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
-                                <img src="images/testi_02.png" alt="" class="img-fluid">
+                                <img src="images/hombre3.jpg" alt="" class="img-fluid">
                                 <h4>Fernando López </h4>
                             </div>
                             <div class="desc">
@@ -296,7 +296,7 @@
 
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
-                                <img src="images/testi_03.png" alt="" class="img-fluid ">
+                                <img src="images/mujer2.jpg" alt="" class="img-fluid ">
                                 <h4>Camila Andrade </h4>
                             </div>
                             <div class="desc">
@@ -334,7 +334,7 @@
 
                         <div class="testimonial clearfix">
                             <div class="testi-meta">
-                                <img src="images/testi_03.png" alt="" class="img-fluid">
+                                <img src="images/mujer1.jpg" alt="" class="img-fluid">
                                 <h4> Sandra Franco </h4>
                             </div>
                             <div class="desc">
