Encabezado Pagina Principal
Se añade imágenes e información al encabezado de la pagina principal (index.html)

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Site Metas -->
-<title>Alpha Academic</title>
+<title>Alpha Academia</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
 
 <!-- Site Icons -->
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="images/logo1.png" type="image/x-icon" />
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
 <!-- Bootstrap CSS -->
@@ -133,7 +133,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="" />
+                    <img src="images/logo1.png" alt="" width="90px" height="90px" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-host" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar"></span>
@@ -147,7 +147,7 @@
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="hover-btn-new log orange" href="#" data-toggle="modal" data-target="#login"><span>Book Now</span></a></li>
+                        <li><a class="hover-btn-new log" href="#" data-toggle="modal" data-target="#login"><span>inscríbete</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -164,16 +164,16 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <div id="home" class="first-section" style="background-image:url('images/slider-01.jpg');">
+                <div id="home" class="first-section" style="background-image:url('images/prinbanner1.jpg');">
                     <div class="dtab">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12 col-sm-12 text-right">
                                     <div class="big-tagline">
-                                        <h2><strong>SmartEDU </strong> education College</h2>
-                                        <p class="lead">With Landigoo responsive landing page template, you can promote your all hosting, domain and email services. </p>
-                                        <a href="#" class="hover-btn-new"><span>Contact Us</span></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <a href="#" class="hover-btn-new"><span>Read More</span></a>
+                                        <h2><strong>Alpha Academica</strong> Institucion de Educacion</h2>
+                                        <p class="lead">Somos una institucion que promueve el aprendizaje de nuestros jovenes.</p>
+                                        <a href="contact.html" class="hover-btn-new"><span>Contacto</span></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <a href="about.html" class="hover-btn-new"><span>Leer mas...</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -191,8 +191,8 @@
                             <div class="row">
                                 <div class="col-md-12 col-sm-12 text-left">
                                     <div class="big-tagline">
-                                        <h2 data-animation="animated zoomInRight">SmartEDU <strong>education school</strong></h2>
-                                        <p class="lead" data-animation="animated fadeInLeft">With Landigoo responsive landing page template, you can promote your all hosting, domain and email services. </p>
+                                        <h2 data-animation="animated zoomInRight"><strong>Institucion Educativa</strong></h2>
+                                        <p class="lead" data-animation="animated fadeInLeft">Enfocada al servicio y valores </p>
                                         <a href="#" class="hover-btn-new"><span>Contact Us</span></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         <a href="#" class="hover-btn-new"><span>Read More</span></a>
                                     </div>
@@ -206,16 +206,16 @@
                 <!-- end section -->
             </div>
             <div class="carousel-item">
-                <div id="home" class="first-section" style="background-image:url('images/slider-03.jpg');">
+                <div id="home" class="first-section" style="background-image:url('images/prinbanner2.jfif');">
                     <div class="dtab">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12 col-sm-12 text-center">
                                     <div class="big-tagline">
-                                        <h2 data-animation="animated zoomInRight"><strong>VPS Servers</strong> Company</h2>
-                                        <p class="lead" data-animation="animated fadeInLeft">1 IP included with each server Your Choice of any OS (CentOS, Windows, Debian, Fedora) FREE Reboots</p>
-                                        <a href="#" class="hover-btn-new"><span>Contact Us</span></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <a href="#" class="hover-btn-new"><span>Read More</span></a>
+                                        <h2 data-animation="animated zoomInRight"><strong>Alpha Academia</strong></h2>
+                                        <p class="lead" data-animation="animated fadeInLeft">Amor al conocimiento y aprendizaje</p>
+                                        <a href="contact.html" class="hover-btn-new"><span>Contactenos</span></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <a href="#" class="hover-btn-new"><span>Leer mas</span></a>
                                     </div>
                                 </div>
                             </div>
