Descripcion pagina principal
Se añade texto e imagenes al contenido principal de la pagina (index.html)

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 offset-md-2">
-                    <h3>About</h3>
-                    <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
+                    <h3>Nosotros</h3>
+                    <p class="lead">Te damos la bienvenida a Alpha donde podrás encontrar a los mejores docentes en el área que necesites, donde te ofrecemos clases y cursos personalizados a domicilio.</p>
                 </div>
             </div>
             <!-- end title -->
@@ -253,14 +253,12 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-                        <h4>2018 BEST SmartEDU education school</h4>
-                        <h2>Welcome to SmartEDU education school</h2>
-                        <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                        <h4>Alpha Academia</h4>
+                        <h2>Amor al aprendizaje</h2>
+                        <p>Nuestro Enfoque el aprendizaje de nuestros alumnos y el servicio a la comunidad</p>
 
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis montes, nascetur ridiculus mus. Sed vitae rutrum
-                            neque. </p>
 
-                        <a href="#" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <a href="#" class="hover-btn-new orange"><span>Leer Mas</span></a>
                     </div>
                     <!-- end messagebox -->
                 </div>
@@ -268,7 +266,7 @@
 
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
-                        <img src="images/about_02.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="images/princi1.jpg" alt="" class="img-fluid img-rounded">
                     </div>
                     <!-- end media -->
                 </div>
@@ -285,13 +283,10 @@
 
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-                        <h2>The standard Lorem Ipsum passage, used since the 1500s</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Apoyamos el deporte</h2>
+                        <p>Está demostrado que practicar ejercicio de forma regular contribuye a mantener una buena salud y a prevenir enfermedades. Es por esa razon que apoyamos el deporte</p>
 
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum.</p>
-
-                        <a href="#" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <a href="#" class="hover-btn-new orange"><span>Leer Mas</span></a>
                     </div>
                     <!-- end messagebox -->
                 </div>
