--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
-                        <img src="images/EstdianteHelp.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="images/calculo2.jpg" alt="" class="img-fluid img-rounded">
                     </div>
                     <!-- end media -->
                 </div>
