Se agregó nueva imagen para el formulario.
Cambios en el diseño y texto de la página, además de una nueva imagen para el formulario.

--- a/contact.html
+++ b/contact.html
@@ -164,8 +164,8 @@
     <div id="contact" class="section wb">
         <div class="container">
             <div class="section-title text-center">
-                <h3>Need Help? Sure we are Online!</h3>
-                <p class="lead">Let us give you more details about the special offer website you want us. Please fill out the form below. <br>We have million of website owners who happy to work with us!</p>
+                <h3>Necesitas información acerca de lo que te puede ofrecer Alpha Academia?</h3>
+                <p class="lead">Procede a llenar los datos requeridos para que podamos contactarte <br></p>
             </div>
             <!-- end title -->
 
@@ -199,14 +199,13 @@
                 </div>
                 <!-- end col -->
                 <div class="col-xl-6 col-md-12 col-sm-12">
-                    <div class="map-box">
-                        <div id="custom-places" class="small-map"></div>
-                    </div>
+                    <img src="images/imagen2.jpg" alt="" width="500px" height="500px" />
                 </div>
             </div>
-            <!-- end row -->
         </div>
-        <!-- end container -->
+        <!-- end row -->
+    </div>
+    <!-- end container -->
     </div>
 
 
