--- a/contact.html
+++ b/contact.html
@@ -207,97 +207,100 @@
     </div>
     <!-- end container -->
     </div>
-
-
-    <footer class="footer">
+    <div id="contact" class="section wb">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-xs-12">
-                    <div class="widget clearfix">
-                        <div class="widget-title">
-                            <h3>About US</h3>
-                        </div>
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
-                        <div class="footer-right">
-                            <ul class="footer-links-soi">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-github"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                            </ul>
-                            <!-- end links -->
-                        </div>
-                    </div>
-                    <!-- end clearfix -->
-                </div>
-                <!-- end col -->
-
-                <div class="col-lg-4 col-md-4 col-xs-12">
-                    <div class="widget clearfix">
-                        <div class="widget-title">
-                            <h3>Information Link</h3>
-                        </div>
-                        <ul class="footer-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                        <!-- end links -->
-                    </div>
-                    <!-- end clearfix -->
-                </div>
-                <!-- end col -->
-
-                <div class="col-lg-4 col-md-4 col-xs-12">
-                    <div class="widget clearfix">
-                        <div class="widget-title">
-                            <h3>Contact Details</h3>
-                        </div>
-
-                        <ul class="footer-links">
-                            <li><a href="mailto:#">info@yoursite.com</a></li>
-                            <li><a href="#">www.yoursite.com</a></li>
-                            <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
-                            <li>+61 3 8376 6284</li>
-                        </ul>
-                        <!-- end links -->
-                    </div>
-                    <!-- end clearfix -->
-                </div>
-                <!-- end col -->
+            <div class="section-title text-center">
+                <h3>Gracias por confiar en Alpha Academia</h3>
 
             </div>
-            <!-- end row -->
-        </div>
-        <!-- end container -->
-    </footer>
-    <!-- end footer -->
 
-    <div class="copyrights">
-        <div class="container">
-            <div class="footer-distributed">
-                <div class="footer-center">
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SmartEDU</a> Design By : <a href="https://html.design/">html design</a></p>
+
+            <footer class="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-xs-12">
+                            <div class="widget clearfix">
+                                <div class="widget-title">
+                                    <h3>About US</h3>
+                                </div>
+                                <p> Alpha Academia es la nueva academia en ascenso, buscando la excelencia para contruir a las jóvenes del futuro</p>
+                                <div class="footer-right">
+                                    <ul class="footer-links-soi">
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                                    </ul>
+                                    <!-- end links -->
+                                </div>
+                            </div>
+                            <!-- end clearfix -->
+                        </div>
+                        <!-- end col -->
+
+                        <div class="col-lg-4 col-md-4 col-xs-12">
+                            <div class="widget clearfix">
+                                <div class="widget-title">
+                                    <h3>Información</h3>
+                                </div>
+                                <ul class="footer-links">
+                                    <li><a href="#">Casa</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Precios</a></li>
+                                    <li><a href="#">Acerca de</a></li>
+                                    <li><a href="#">Contacto</a></li>
+                                </ul>
+                                <!-- end links -->
+                            </div>
+                            <!-- end clearfix -->
+                        </div>
+                        <!-- end col -->
+
+                        <div class="col-lg-4 col-md-4 col-xs-12">
+                            <div class="widget clearfix">
+                                <div class="widget-title">
+                                    <h3>Contáctanos</h3>
+                                </div>
+
+                                <ul class="footer-links">
+                                    <li><a href="mailto:#">alpha@gmail.com</a></li>
+                                    <li><a href="#">www.alpha.com</a></li>
+
+                                    <li>+51 313 205 4879</li>
+                                </ul>
+                                <!-- end links -->
+                            </div>
+                            <!-- end clearfix -->
+                        </div>
+                        <!-- end col -->
+
+                    </div>
+                    <!-- end row -->
                 </div>
-            </div>
-        </div>
-        <!-- end container -->
-    </div>
-    <!-- end copyrights -->
+                <!-- end container -->
+            </footer>
+            <!-- end footer -->
 
-    <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
+            <div class="copyrights">
+                <div class="container">
+                    <div class="footer-distributed">
+                        <div class="footer-center">
+                            <p class="footer-company-name">Todos los derechos reservados. &copy; 2020 <a href="#">Alpha Academia</a> Hecho por : <a href="https://Grupo5.com/">Juan Diego Villegas</a></p>
+                        </div>
+                    </div>
+                </div>
 
-    <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCKjLTXdq6Db3Xit_pW_GK4EXuPRtnod4o"></script>
-    <!-- Mapsed JavaScript -->
-    <script src="js/mapsed.js"></script>
-    <script src="js/01-custom-places-example.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
+                <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
+
+                <!-- ALL JS FILES -->
+                <script src="js/all.js"></script>
+                <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCKjLTXdq6Db3Xit_pW_GK4EXuPRtnod4o"></script>
+                <!-- Mapsed JavaScript -->
+                <script src="js/mapsed.js"></script>
+                <script src="js/01-custom-places-example.js"></script>
+                <!-- ALL PLUGINS -->
+                <script src="js/custom.js"></script>
 
 </body>
 
